Adding QWeakPointers for the walletbar and the previewselectorbar. While this can be overkilling for the previewselectorbar, I'd like doing it for all the bars in our next stable, moving them INSIDE the webtab class, so that each webtab has its findbar, its zoombar and so on.

This should fix
BUG: 243508

Please, let me know if it's not the case.. Thanks!